fix text align of spot description

--- a/frontend/src/components/SpotDetail/SpotDetail.module.css
+++ b/frontend/src/components/SpotDetail/SpotDetail.module.css
@@ -16,6 +16,7 @@
 
 .spotDescription {
     font-size: 15pt;
+    text-align: left;
 }
 
 .hostInfo {
